@@ -43,6 +43,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 - [PORTAL] [TOTP] Use lowercase login when assigning a TOTP profile to a username
 - [API_PARSER] [SENTINELONE] Properly get all techniques' names
+### Added
+- [API_PARSER] [LOCKSELF] New API parser LOCKSELF
 
 
 ## [2.15.12] - 2024-10-08
